# libdse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml
.github/workflows/: docker.yml
docs/: conf.py
docs/api/: data.rst  metrics.rst  nets.rst  showcases.rst  train.rst
docs/guide/: overview.rst  quickstart.rst
models/: hyperparams.json  waveunet.pth
src/aese/: __init__.py  metrics.py  nets.py
src/aese/data/: __init__.py  features.py  librispeech.py  noise.py
src/aese/showcases/: simpleAE_logmag_nc.py
src/aese/train/: __init__.py  simpleAE_logmag_nc.py
src/dae/data/: dataprep.py  noise.py  speech.py
src/libdse/: __init__.py  evaluation.py  inference.py  nets.py
src/libdse/data/: __init__.py  err.py  features.py  librispeech.py  noise.py
src/libdse/showcases/: dae.py  showcase.py
src/libdse/train/: __init__.py  dae.py  waveunet.py
tests/: test_app.py  test_dataset.py
