[project]
name = "libdse"
version = "0.1.0"
description = "Library for deep-learning-based speech enhancement models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.11.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.3",
    "pesq>=0.0.4",
    "pre-commit>=4.6.0",
    "pystoi>=0.4.1",
    "ruff",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8"]
docs = ["sphinx>=9.1.0", "furo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
